[Web Payments] Correctly use UTF8ToUTF16 on strings from website.

BUG=711057

Review-Url: https://codereview.chromium.org/2830053002
Cr-Commit-Position: refs/heads/master@{#466026}

Former-commit-id: de031ea2c4d1d738d2ac5b8e270af35e1de39bab